# jojo-adventure-game

./: .gitignore  CMakeLists.txt  level.map  level.txt
inc/: player.hpp  properties.hpp  scene.hpp
src/: main.cpp  player.cpp  scene.cpp
